<resources>
    <string name="app_name">TechConnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_self_help">Self Help</string>
    <string name="menu_resources">Resources</string>
    <string name="title_activity_intro_tutorial">TechConnect Tutorial</string>
    <string name="directory">Directory</string>
    <string name="resume_session">Resume Session</string>
    <string name="repair_history">Repair History</string>
    <string name="reports">Reports</string>
    <string name="sync_online_resources">Update All Guides</string>
    <string name="loading">Loading</string>
    <string name="no_reports">No Reports</string>
    <string name="department">Department</string>
    <string name="device">Device</string>
    <string name="devices">Devices</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="role">Role</string>
    <string name="start_session">Start Session</string>
    <string name="notes">Notes</string>
    <string name="available_techs">Available Techs</string>
    <string name="question">Question</string>
    <string name="start_date">Start Date</string>
    <string name="resources">Resources</string>
    <string name="end_session">End Session</string>
    <string name="contact_title">Title</string>
    <string name="contact_location">Location</string>
    <string name="back">Back</string>
    <string name="help_documents">Help Documents</string>
    <string name="devices_available">devices available</string>
    <string name="tutorial_title_welcome">Welcome to TechConnect!</string>
    <string name="tutorial_msg_welcome">Swipe for some quick tips</string>
    <string name="tutorial_title_guides_home">Guide Homescreen</string>
    <string name="tutorial_msg_guides_home">This screen contains all charts that have been downloaded to the device. Additional guides can be added by pressing the button at the bottom of the screen</string>
    <string name="tutorial_title_device_home">View device details and start a session</string>
    <string name="tutorial_msg_device_home">Each device has a page with additional resources and comments on the guide as a whole. Press the \"Start Session\" button to begin</string>
    <string name="tutorial_title_step">Start Session and Begin Troubleshooting</string>
    <string name="tutorial_msg_step">Each troubleshooting step contains instructions on what to do next during the repair</string>
    <string name="tutorial_title_step_details">Comments and Resources on Each Step</string>
    <string name="tutorial_msg_step_details">Users have the ability to comment on any step of the chart. In addition, resources relevant to the step may be provided</string>
    <string name="tutorial_title_hamburger">Other Features</string>
    <string name="tutorial_msg_hamburger">Other than the guides, you have access to other fuctions from the main menu including your profile and a directory</string>
    <string name="tutorial_title_profile">Profile Page</string>
    <string name="tutorial_msg_profile">You can view and edit your profile page</string>
    <string name="tutorial_title_directory">User Directory</string>
    <string name="tutorial_msg_directory">The directory allows you to connect with other technicians in order to get help on a repair</string>
    <string name="tutorial_title_directory_skill">Search by Skill or Name</string>
    <string name="tutorial_msg_directory_skill">The search bar allows you to search for technicians either by name or by a particular skill</string>
    <string name="click_im_preview">Click an image preview to zoom in</string>
    <string name="loading_resources">Loading Resources</string>
    <string name="error_loading_resources">Error loading resources</string>
    <string name="view_tutorial">Getting Started</string>
    <string name="downloading_resources">Downloading Resources</string>
    <string name="title_activity_login">Sign in</string>
    <string name="no_skills">No Skills Provided</string>
    <string name="curr_step">Current Step</string>
    <string name="delete_session">Delete Session</string>
    <string name="session_title">Session</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_skill">Skill</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_signin">Incorrect email or password</string>
    <string name="error_signin_field_required">Email and password fields are required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip_sign_in">Skip sign in</string>
    <string name="skip_sign_in_msg">Skipping signin will make some features unavailable, such as commenting.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="search_guides">Search</string>
    <string name="load_catalog_failed">Failed to load the catalog</string>
    <string name="try_again">Try Again</string>
    <string name="guide_catalog">Guide Catalog</string>
    <string name="available_guides">Available Guides</string>
    <string name="no_guides">No guides have been downloaded yet</string>
    <string name="download_guides">Download Guides</string>
    <string name="title_activity_guide">Your Guide</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="score">Score</string>
    <string name="version">Version</string>
    <string name="guides">Guides</string>
    <string name="error_play_guide">There was an error displaying this guide. Try re-downloading the guide</string>
    <string name="update_guide">Update Guide</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_info">Device Information</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model_number">Model Number</string>
    <string name="start_guide">Start Guide</string>
    <string name="last_updated">Updated</string>
    <string name="no_sessions">You have no sessions</string>
    <string name="resources_general_msg">General Resources</string>
    <string name="resources_none_msg">No Resources</string>
    <string name="no_comments">No Comments</string>
    <string name="update">Update</string>
    <string name="guide_updated">Guide Updated</string>
    <string name="fail_update_guide">Failed to update</string>
    <string name="ask_permissions">TechConnect requires some permissions to run. Please grant the requested permissions.</string>
    <string name="grant_permission">Grant Permissions</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="expertises_hint">Skills (comma separated)</string>
    <string name="country">Country</string>
    <string name="field_required">This field is required</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="password_length">Password must be atleast 5 characters long</string>
    <string name="failed_register">Failed to register! Check your information and try again</string>
    <string name="user_registered">Registration successful!</string>
    <string name="action_sign_out">Sign out</string>
    <string name="logging_out">Signing out</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="comments">Comments</string>
    <string name="download">Download</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="updating">Updating...</string>
    <string name="write_comment">Write Comment...</string>
    <string name="login_required">Login Required</string>
    <string name="login_req_post_comment">You must be logged in to post a comment</string>
    <string name="posting">Posting...</string>
    <string name="error">Error</string>
    <string name="failed_post_comment">Failed to post the comment</string>
    <string name="failed_update_user">Failed to update profile info</string>
    <string name="couldnt_login">Could not sign in. Check your email and password and try again</string>
    <string name="view_profile">View Profile</string>
    <string name="sign_in_to_comment">Please sign in to comment</string>
    <string name="action_post_app_feedback">Send Feedback</string>
    <string name="feedback_success">Thank you for your feedback</string>
    <string name="feedback_fail">Failed to send the feedback</string>
    <string name="save_changes_msg">Would you like to save your profile changes?</string>
    <string name="offline_results_shown">Offline Results Shown</string>
    <string name="search_skills_or_names">Search for skills or users</string>
    <string name="search">Search</string>
    <string name="offline_guides">View Downloaded Guides</string>
    <string name="sort">Sort</string>
    <string name="date">Date</string>
    <string name="confirm_delete_session">Are you sure you want to delete this repair session?</string>
    <string name="feedback_experience_guide">What was your experience with this guide?</string>
    <string name="feedback_experience_option_1">TechConnect was very helpful</string>
    <string name="feedback_experience_option_2">TechConnect was somewhat helpful</string>
    <string name="feedback_experience_option_3">TechConnect was not helpful</string>
    <string name="feedback_did_use_tc_contact">Did you use TechConnect to find someone to contact?</string>
    <string name="feedback_contact_option_1">Yes, they helped me</string>
    <string name="feedback_contact_option_2">Yes, but they did not help me</string>
    <string name="feedback_contact_option_3">No</string>
    <string name="other_feedback">Other Comments:</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="save_session">Save Session</string>
    <string name="save_session_msg">Would you like to save this session?</string>
    <string name="feedback_no_selections">Please select your feedback</string>
    <string name="export_repair_history">Export Repair History</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="finished_date">End Date</string>
    <string name="status">Status</string>
    <string name="required_fields">All fields except Notes are required</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_for_skills">Search for skills</string>
    <string name="other">Other</string>
    <string name="select_skill">Select Skill</string>
    <string name="post_a_question">Post a Question</string>
    <string name="post_question">Post Question</string>
    <string name="post_question_prompt">Select an active session to include with question (optional)</string>
    <string name="company_email">jhu.techconnect@gmail.com</string>
    <string name="help">Help</string>
    <string name="contact_an_expert">Contact an Expert</string>
    <string name="problem">Problem</string>
    <string name="solution">Solution</string>
    <string name="delete">Delete</string>
    <string name="export_history">Export History</string>
    <string name="exportResponse_autofill">Hello,\nI am unable to repair this device, can you help me?\n</string>
    <string name="exportResponse_subject">Assistance Requested</string>
    <string name="my_repair_history">My Repair History</string>
</resources>