<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_self_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_self_help" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/reports" />
        <item
            android:id="@+id/call_dir"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/call_directory" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_refresh"
            android:icon="@android:drawable/stat_notify_sync_noanim"
            android:title="@string/sync_online_resources" />
        <item
            android:id="@+id/nav_view_tut"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/view_tutorial" />
    </group>

</menu>
