<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title= "@string/sort"
        android:icon = "@drawable/ic_sort_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:checkableBehavior="single"
                >
                <item android:id="@+id/date_item"
                    android:title="@string/date"
                    android:orderInCategory="100"
                    app:showAsAction="never" />

                <item android:id="@+id/device_item"
                    android:title="@string/device"
                    android:orderInCategory="100"
                    app:showAsAction="never"/>
            </group>
        </menu>
        >
    </item>
</menu>