<?xml version="1.0" encoding="utf-8"?>
<org.techconnect.views.SelfHelpIntroView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/intro_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/department"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/department_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/department_editText"
            android:layout_marginTop="8dp"
            android:text="@string/device"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/device_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/department_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/department_editText"
            android:layout_below="@+id/devices_available_text_view"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/device_spinner"
            android:layout_alignStart="@+id/device_spinner"
            android:layout_below="@+id/device_spinner"
            android:layout_marginTop="8dp"
            android:text="@string/role"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/device_spinner"
            android:layout_alignLeft="@+id/device_spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/device_spinner"
            android:layout_below="@+id/textView8"
            android:spinnerMode="dropdown"
            android:visibility="gone" />

        <Button
            android:id="@+id/start_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/notes_editText"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_session" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/role_spinner"
            android:layout_marginTop="8dp"
            android:text="@string/notes"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notes_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/role_spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/role_spinner"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/devices_available_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="4dp"
            android:text="(10 Available)"
            android:textSize="14sp" />
    </RelativeLayout>
</org.techconnect.views.SelfHelpIntroView>